[package]
name = "twitchctl"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>", "_Bare <bare@logixsr.com>", "cafce25 <cafce25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
derive-error = "0.0.5"
dotenv = "0.15.0"
fuzzy-filter = "0.1.0"
structopt = "0.3.21"
surf = "2.2.0"
thiserror = "1.0.24"
tokio = {version="1.4.0",features=["full"]}
twitch_api2 = {git = "https://github.com/Emilgardis/twitch_api2", features= ["helix", "client", "surf"]}
twitch_oauth2 = {git = "https://github.com/Emilgardis/twitch_oauth2", features = ["surf_client"]}

