[package]
name = "twitchctl"
version = "0.1.0"
authors = [
  "Togglebit <me@togglebit.io>",
  "_Bare <bare@logixsr.com>",
  "cafce25 <cafce25@gmail.com>",
  "ModProg <dev@modprog.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derivative = "2.2.0"
derive-error = "0.0.5"
dotenv = "0.15.0"
fuzzy-filter = "0.1.0"
serde = "1.0.125"
structopt = "0.3.21"
surf = "2.2.0"
thiserror = "1.0.24"
derive_builder = "0.10.0"
dirs = "3.0.2"

[dependencies.figment]
version = "0.10.5"
features = ["env", "toml", "json", "yaml"]

[dependencies.tokio]
version = "1.4.0"
features = ["full"]

[dependencies.twitch_api2]
git = "https://github.com/Emilgardis/twitch_api2"
features = ["helix", "client", "surf"]

[dependencies.twitch_oauth2]
git = "https://github.com/Emilgardis/twitch_oauth2"
features = ["surf_client"]
